file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(cuda_${file} ${testfile})
    # target_compile_options(${file} PUBLIC ${COMPILE_TEST_FLAGS})
    target_link_libraries(cuda_${file} ${cryptanalysislib_CUDA} fplll gmp gmpxx m4ri)
    add_dependencies(cuda_${file} m4ri_project fplll_project)
endforeach(testfile ${TEST_SOURCES})

file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cu" "" file ${filename})
    add_executable(cuda_${file} ${testfile})
    # target_compile_options(${file} PUBLIC ${COMPILE_TEST_FLAGS})
    target_link_libraries(cuda_${file} ${cryptanalysislib_CUDA} fplll gmp gmpxx m4ri)
    add_dependencies(cuda_${file} m4ri_project fplll_project)
endforeach(testfile ${TEST_SOURCES})