file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(test_thread_${file} ${testfile})
    target_compile_options(test_thread_${file} PUBLIC ${COMPILE_TEST_FLAGS})
    target_link_libraries(test_thread_${file} ${LINK_TEST_FLAGS})
endforeach(testfile ${TEST_SOURCES})
