file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(test_algorithm_subsetsum_${file} ${testfile}
            subsetsum.h)
    target_compile_options(test_algorithm_subsetsum_${file} PUBLIC ${COMPILE_TEST_FLAGS})
    target_link_libraries(test_algorithm_subsetsum_${file} ${LINK_TEST_FLAGS})
	add_test(AllTests test_algorithm_subsetsum_${file})
endforeach(testfile ${TEST_SOURCES})